# typemill-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
src/typemill_mcp/: client.py  server.py
src/typemill_mcp/tools/: blocks.py  lifecycle.py  media.py  meta.py  pages.py  structure.py  types.py
tests/: conftest.py  test_blocks.py  test_integration.py  test_lifecycle.py  test_media.py  test_meta.py  test_navigation.py  test_pages.py  test_structure.py
tests/fixtures/settings/: settings.yaml
tests/fixtures/settings/users/: testadmin.yaml
