[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "typemill-mcp"
version = "0.1.0"
description = "MCP server for Typemill CMS — enables AI assistants to read and manage Typemill content via the Model Context Protocol."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "testcontainers>=4.0.0",
    "bcrypt>=4.0.0",
]

[project.scripts]
typemill-mcp = "typemill_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/typemill_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests requiring Docker",
]
